changed background image source

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -33,7 +33,7 @@ audio {
   // padding-top: 1.5em;
 }
 .header {
-    background:url('rock-island.jpeg');
+    background:url('/assets/rock-island.jpeg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
