icon path changed

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
       </div>
       <div class="top-text col-md-3 col-md-offset-3" data-center="opacity: 1;"
           data--100-bottom="opacity: 0;">
-        <img class="item responsive-design-icon" src="assets/responsive2.png" alt="" data-aos=""/>
+        <img class="item responsive-design-icon" src="<%= asset_path 'responsive2.png' %>" alt="" data-aos=""/>
       </div>
     </div>
     <div class="row">
