changed pic and text paths

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,15 +16,15 @@
 
  @font-face {
    font-family: "myriad-set-pro_ultralight";
-   src: url('/assets/myriad-set-pro_ultralight');
+   src: font-url('/assets/myriad-set-pro_ultralight');
  }
 
  @font-face {
    font-family: "myriad-set-pro_text";
-   src: url('/assets/myriad-set-pro_text');
+   src: font-url('/assets/myriad-set-pro_text');
  }
 
  @font-face {
    font-family: "myriad-set-pro_thin";
-   src: url('/assets/myriad-set-pro_thin');
+   src: font-url('/assets/myriad-set-pro_thin');
  }
