--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <div class="header">
     <div class="gradient"></div>
       <div class="demo"></div>
-        <a href="https://www.devonjohnson.io"><img class="logo" id="logo" src="/assets/portfolio-logo.png"/></a>
+        <a href="https://www.devonjohnson.io"><img class="logo" id="logo" src="<%= asset_path 'portfolio-logo.png' %>"/></a>
       </div>
       <div class="hsContent" id="blur" data-250-center="left: 658px;"
             data-top="left: 1600px;">
@@ -58,7 +58,7 @@
     <div class="row">
       <div class="item bottom-text col-md-4 col-md-offset-1" data-aos="" data-center="opacity: 1;"
           data--100-bottom="opacity: 0;">
-        <img class="responsive-design-icon"src="assets/internet.png" alt=""/>
+        <img class="responsive-design-icon"src="<%= asset_path 'internet.png' %>" alt=""/>
       </div>
       <div class="bottom-text col-md-4 col-md-offset-2">
         <h3 data-aos="fade-left" data-aos-offset="200"
@@ -88,7 +88,7 @@
 <footer>
   <div class="container">
     <div class="footer-logo col-md-4 col-md-offset-4 text-center">
-      <img href="https://www.devonjohnson.io/home/work" src="/assets/portfolio-logo.png"/>
+      <img href="https://www.devonjohnson.io/home/work" src="<%= asset_path 'portfolio-logo.png' %>"/>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
