work background image added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,8 @@
  */
 
  @font-face {
-   font-family: "myriad-set-pro_ultralight";
-   src: font-url('/assets/myriad-set-pro_ultralight');
+   font-family: 'myriad-set-pro_ultralight';
+   src: font-url("/assets/myriad-set-pro_ultralight");
  }
 
  @font-face {
