production.rb change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <!-- <link rel="" href="/assets/TweenMax.js">
     <link rel="" href="/assets/TimelineLite.js">
     <link rel="" href="/assets/Tweenlite.js"> -->
-    <link rel="" href="/assets/main.js">
+    <link rel="" href="app/assets/main.js">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
