--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <link rel="" href="/assets/TimelineLite.js">
     <link rel="" href="/assets/Tweenlite.js"> -->
     <link rel="" href="app/assets/main.js">
+    <link rel="" href="/assets/_main.js">
+    <link rel="" href="/assets/imagesloaded.js">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
