--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
           <h4 class="line-1 anim-typewriter2">in Miami, FL</h4>
           <audio id="player" loop="true">
             <!-- <source preload="auto" src="<%= audio_path '03 I Remember (Instrumental).m4a'%>"></source> -->
-            <source preload="auto" src="<%= audio_path '03 I Remember (Instrumental).mp3'%>"></source>
+            <source preload="auto" src="<%= asset_path '03 I Remember (Instrumental).mp3'%>"></source>
             <!-- <source src="<%= audio_path '03 Destiny.m4a'%>"></source> -->
             <!-- <source src="<%= audio_path '03 Destiny 1.mp3'%>"></source> -->
           </audio>
