--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Devon Johnson</title>
+    <title>GsapExamples</title>
     <%= csrf_meta_tags %>
 
     <!-- ion icon css -->
