font asset path changed

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -15,9 +15,10 @@
  */
 
  @font-face {
-   font-family: 'myriad-set-pro_ultralight';
-   src: url("/assets/myriad-set-pro_ultralight");
+   font-family: "myriad-set-pro_ultralight";
+   src: url("<%= asset_path 'myriad-set-pro_ultralight.ttf' %>");
  }
+
 
  @font-face {
    font-family: "myriad-set-pro_text";
@@ -26,5 +27,5 @@
 
  @font-face {
    font-family: "myriad-set-pro_thin";
-   src: url('/assets/myriad-set-pro_thin');
+   src: url("<%= asset_path 'myriad-set-pro_thin.ttf' %>");
  }
