scripts added to index with erb tag

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -104,3 +104,6 @@
     </div>
   </div>
 </footer>
+
+<script src="<%= asset_path 'imagesloaded.js'%>"  type="text/javascript"></script>
+<script src="<%= asset_path '_main.js'%>"  type="text/javascript"></script>
