--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -54,6 +54,25 @@ audio {
 .hsContent h2 {
   font-size: 1.65em;
 }
+.hsContent::before {
+  background: image-url('rock-island.jpeg') 0 / cover fixed;
+}
+.hsContent {
+  margin: 100px auto;
+  line-height: 1.5;
+  overflow: hidden;
+}
+.hsContent::before {
+  content: '';
+  margin: -100px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  filter: blur(15px);
+  z-index: -1;
+}
 .icon {
   font-size: 25px;
 }
