--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -83,8 +83,8 @@ button {
   padding: 12px;
 }
 #blur {
- filter:blur(5px);
- -webkit-backdrop-filter: blur(1.5px);
+ // filter:blur(5px);
+ // -webkit-backdrop-filter: blur(1.5px);
 }
 #slide-2 {
   background-color: #15212f;
