#blur changed back

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -84,7 +84,7 @@ button {
 }
 #blur {
  // filter:blur(5px);
- // -webkit-backdrop-filter: blur(1.5px);
+ -webkit-backdrop-filter: blur(1.5px);
 }
 #slide-2 {
   background-color: #15212f;
