--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -30,6 +30,7 @@ audio {
   font-size: 15px;
 }
 .navbar {
+  // padding-top: 1.5em;
 }
 .header {
     background: image-url('rock-island.jpeg');
@@ -49,6 +50,7 @@ audio {
 .hsContent {
 	max-width: 700px;
 	position: absolute;
+	// right: 38.5%;
   left: 44%;
 }
 .hsContent h2 {
