link tag for blur effect added

--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -107,7 +107,7 @@
                <h1>Local Lilly</h1>
                <h2>Web Design</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <h3>A winning mockup I created for a web design contest using HTML5, CSS3, Bootstrap, and Adobe Illustrator. The client provided a name and concept. She envisioned a platform that will find local infuencers that can help you promote your business.</h3>
+                 <h3>A winning mockup I created for a web design contest using HTML5, CSS3, Bootstrap, and Adobe Illustrator. The client provided a name and a concept. She envisioned a platform that will find local infuencers that can help you promote your business.</h3>
                </div>
              </div>
        </div>
