blur effect css added to home

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -56,6 +56,32 @@ audio {
 .hsContent h2 {
   font-size: 1.65em;
 }
+.hsContent::before {
+  background: url('rock-island.jpeg') 0 / cover fixed;
+}
+
+.hsContent {
+  margin: 100px auto;
+  // position: relative;
+  // background: hsla(0,0%,100%,.3);
+  line-height: 1.5;
+  // width: 60%;
+  // box-shadow: 0px 0px .5px black;
+  overflow: hidden;
+}
+
+.hsContent::before {
+  content: '';
+  margin: -100px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  filter: blur(15px);
+  z-index: -1;
+}
+
 .icon {
   font-size: 25px;
 }
