require tree added back for local host

--- a/app/assets/stylesheets/blur_effect.scss
+++ b/app/assets/stylesheets/blur_effect.scss
@@ -1,5 +1,5 @@
 .hsContent::before {
-  background: url('rock-island.jpeg') 0 / cover fixed;
+  background: image-url('rock-island.jpeg') 0 / cover fixed;
 }
 
 .hsContent {
