script for skrollr.js added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GsapExamples</title>
+    <title>GSAP</title>
     <%= csrf_meta_tags %>
 
     <!-- ion icon css -->
@@ -22,6 +22,7 @@
   <body>
     <%= yield %>
 
+    <!-- scroll magic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"  type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"  type="text/javascript"></script>
 
@@ -43,6 +44,6 @@
     <!-- scroll magic -->
     <script src="/assets/imagesloaded.js"  type="text/javascript"></script>
     <script src="/assets/_main.js"  type="text/javascript"></script>
-    </script>
+    <script src="/assets/skrollr.js"  type="text/javascript"></script>
   </body>
 </html>
