--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,5 +45,6 @@
     <script src="/assets/imagesloaded.js"  type="text/javascript"></script>
     <script src="/assets/_main.js"  type="text/javascript"></script>
     <script src="/assets/skrollr.js"  type="text/javascript"></script>
+    <script src="/assets/_main.js"  type="text/javascript"></script>
   </body>
 </html>
