more scripts added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,14 +29,11 @@
     <!-- animate on scroll cdn -->
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"  type="text/javascript"></script>
 
-    <!--CDN link for  TweenMax-->
-    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"  type="text/javascript"></script> -->
-
     <!--CDN links for TweenLite, CSSPlugin, and EasePack-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js"  type="text/javascript"></script>
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js"  type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"  type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js" type="text/javascript"></script>
-
+ -->
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"  type="text/javascript" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -47,5 +44,6 @@
     <script src="/assets/skrollr.js"  type="text/javascript"></script>
     <script src="/assets/_main.js"  type="text/javascript"></script>
     <script src="/assets/TweenMax.min.js"  type="text/javascript"></script>
+    
   </body>
 </html>
