main.js script added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,8 +42,8 @@
     <script src="/assets/imagesloaded.js"  type="text/javascript"></script>
     <script src="/assets/_main.js"  type="text/javascript"></script>
     <script src="/assets/skrollr.js"  type="text/javascript"></script>
-    <script src="/assets/_main.js"  type="text/javascript"></script>
+    <script src="/assets/main.js"  type="text/javascript"></script>
     <script src="/assets/TweenMax.min.js"  type="text/javascript"></script>
-    
+
   </body>
 </html>
