--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,10 +26,12 @@
 <section id="slide-2" class="about">
   <div class="container">
     <div class="col-md-4 col-md-offset-4 text-center">
-      <h2>Hi.</h2>
+      <h2 data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">Hi.</h2>
     </div>
     <div class="col-md-6 col-md-offset-3">
-      <p>
+      <p data-aos="fade-down" data-aos-anchor-placement="top-center">
          I like music, golf, and web design. I'm a web designer and full-stack developer based in Miami, FL. I have a passion for web design and development for all devices.</p>
     </div>
   </div>
@@ -38,35 +40,31 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-md-offset-4 text-center">
-        <h2 data-aos="fade-up" data-aos-easing="ease-in-sine">What I can do.</h2>
+        <h2 data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500" data-aos-offset="200">What I can do.</h2>
       </div>
     </div>
     <div class="row">
       <div class="top-text col-md-4 col-md-offset-1">
-  		    <h3 data-aos="fade-right" data-aos-offset="200"
-          data-aos-easing="ease-in-sine">Develop what you need.</h3>
+  		    <h3 data-aos="fade-right">Develop what you need.</h3>
           <p data-aos="fade-right"
-             data-aos-offset="200"
-             data-aos-easing="ease-in-sine">
+             data-aos-offset="200">
             I can create websites to do what you want and run across all devices using the latest technologies.</p>
       </div>
-      <div class="top-text col-md-3 col-md-offset-3" data-center="opacity: 1;"
-          data--100-bottom="opacity: 0;">
+      <div class="top-text col-md-3 col-md-offset-3">
         <img class="item responsive-design-icon" src="<%= asset_path 'responsive2.png' %>" alt="" data-aos=""/>
       </div>
     </div>
     <div class="row">
-      <div class="item bottom-text col-md-4 col-md-offset-1" data-aos="" data-center="opacity: 1;"
-          data--100-bottom="opacity: 0;">
+      <div class="item bottom-text col-md-4 col-md-offset-1" data-aos="">
         <img class="responsive-design-icon"src="<%= asset_path 'internet.png' %>" alt=""/>
       </div>
       <div class="bottom-text col-md-4 col-md-offset-2">
-        <h3 data-aos="fade-left" data-aos-offset="200"
-        data-aos-easing="ease-in-sine">Design what you want.</h3>
+        <h3 data-aos="fade-left">Design what you want.</h3>
         <p data-aos="fade-left"
-           data-aos-offset="200"
-           data-aos-easing="ease-in-sine">
-           My style is simple and I think less is more. I focus on optimizing the user experience with modern design and intuitive functionality.</p>
+           data-aos-offset="200">
+           My style is simple and I believe less is more. I focus on optimizing the user experience with clean design and intuitive functionality.</p>
       </div>
     </div>
   </div>
@@ -77,11 +75,11 @@
       <h2 data-aos="fade-up">I can help.</h2>
     </div>
     <div class="contact col-md-6 col-md-offset-3 text-center">
-      <h3 data-aos="fade-up">I'm currently available for freelance work.</h3>
-      <p data-aos="fade-up">Have a project you want to get started or want my help with something? Get in touch.</p>
+      <h3 data-aos="fade-up" data-aos-offset="200">I'm currently available for freelance work.</h3>
+      <p data-aos="fade-up" data-aos-offset="350">Have a project you want to get started or want my help with something? Get in touch.</p>
     </div>
     <div class="email col-md-4 col-md-offset-4 text-center">
-      <a href="mailto:dljohnson@rollins.edu" class="btn btn-lg btn-dark item" data-aos="zoom-out"><i class="fa fa-envelope-o" aria-hidden="true"></i> MESSAGE ME</a>
+      <a href="mailto:dljohnson@rollins.edu" class="btn btn-lg btn-dark item" data-aos="zoom-out" data-aos-offset="300"><i class="fa fa-envelope-o" aria-hidden="true"></i> MESSAGE ME</a>
     </div>
   </div>
 </section>
