--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -82,7 +82,7 @@ button {
   background: rgba(255,255,255,0.3);
   color: rgba(255,255,255,.60);
   border-radius: 5px;
-  padding: 12px;
+  padding: 18px;
 }
 #blur {
  // filter:blur(5px);
@@ -101,7 +101,11 @@ button {
   color: #fff;
 }
 .responsive-design-icon {
-  height: 16em;
+  padding-top: 1em;
+  height: 14em;
+}
+.item.bottom-text {
+  padding-top: 21em !important;
 }
 #slide-3 {
   background-color: #15212f;
