--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
      data-aos-duration="1500">Hi.</h2>
     </div>
     <div class="col-md-6 col-md-offset-3">
-      <p data-aos="fade-down" data-aos-anchor-placement="top-center">
+      <p data-aos="fade-down" data-aos-anchor-placement="center-bottom">
          I like music, golf, and web design. I'm a web designer and full-stack developer based in Miami, FL. I have a passion for web design and development for all devices.</p>
     </div>
   </div>
@@ -46,21 +46,21 @@
       </div>
     </div>
     <div class="row">
-      <div class="top-text col-md-4 col-md-offset-1">
+      <div class="top-text col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
   		    <h3 data-aos="fade-right">Develop what you need.</h3>
           <p data-aos="fade-right"
              data-aos-offset="200">
             I can create websites to do what you want and run across all devices using the latest technologies.</p>
       </div>
-      <div class="top-text col-md-3 col-md-offset-3">
+      <div class="top-text col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1">
         <img class="item responsive-design-icon" src="<%= asset_path 'responsive2.png' %>" alt="" data-aos=""/>
       </div>
     </div>
     <div class="row">
-      <div class="item bottom-text col-md-4 col-md-offset-1" data-aos="">
+      <div class="item bottom-text col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2" data-aos="">
         <img class="responsive-design-icon"src="<%= asset_path 'internet.png' %>" alt=""/>
       </div>
-      <div class="bottom-text col-md-4 col-md-offset-2">
+      <div class="bottom-text col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1">
         <h3 data-aos="fade-left">Design what you want.</h3>
         <p data-aos="fade-left"
            data-aos-offset="200">
