--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="hsContent" id="blur" data-250-center="left: 658px;"
             data-top="left: 1600px;">
-        <div>
+        <div class="greeting">
       		<h2 class="line-1 anim-typewriter" id="">I'm Devon. A web developer.</h2>
           <h4 class="line-1 anim-typewriter2">in Miami, FL</h4>
           <audio id="player" loop="true">
