--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -112,3 +112,7 @@ padding-top: 10em;
 .portfolio-4 .info {
   text-align: left;
 }
+footer .foot-logo-2 {
+  padding-bottom: 0.5em;
+  bottom: -10em;
+}
