--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,3 @@
-
 <section id="slide-1" class="homeSlide">
   <div class="header">
     <div class="gradient"></div>
@@ -11,13 +10,14 @@
       		<h2 class="line-1 anim-typewriter" id="">I'm Devon. A web developer.</h2>
           <h4 class="line-1 anim-typewriter2">in Miami, FL</h4>
           <audio id="player" loop="true">
-            <!-- <source preload="auto" src="<%= audio_path '03 I Remember (Instrumental).m4a'%>"></source> -->
+            <source preload="auto" src="<%= audio_path '03 I Remember (Instrumental).m4a'%>"></source>
             <source preload="auto" src="<%= asset_path '03 I Remember (Instrumental).mp3'%>"></source>
             <!-- <source src="<%= audio_path '03 Destiny.m4a'%>"></source> -->
             <!-- <source src="<%= audio_path '03 Destiny 1.mp3'%>"></source> -->
           </audio>
           <div class="controls">
           <i class="icon ion-ios-volume-high" id="mute" onclick="document.getElementById('player').muted=!document.getElementById('player').muted"></i>
+          <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
           </div>
         </div>
       </div>
