--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -139,7 +139,7 @@
 </section>
 <footer>
   <div class="container">
-    <div class="footer-logo col-md-4 col-md-offset-4 text-center">
+    <div class="footer-logo-2 col-md-4 col-md-offset-4 text-center">
       <img href="https://www.devonjohnson.io/home/work" src="<%= asset_path 'portfolio-logo.png' %>"/>
     </div>
     <div class="row">
