fonts and styling changes

--- a/app/assets/stylesheets/grayscale.scss
+++ b/app/assets/stylesheets/grayscale.scss
@@ -95,6 +95,7 @@
   display: table-cell;
   vertical-align: middle;
   height: 50em;
+  padding-top: 18em;
 }
 .intro .intro-body .brand-heading {
   font-size: 20px;
