--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,16 +8,18 @@ body {
 section {
 }
 p {
-  font-size: 1.5em;
-  letter-spacing: 0.75px;
+  font-size: 18px;
+  letter-spacing: 0em;
   font-family: 'myriad-set-pro_thin';
-  font-weight: 100;
+  font-weight: 400;
+  line-height: 1.6;
+  font-style: normal;
 }
 h2 {
-  font-size: 3.8em;
+  font-size: 40px;
 }
 h3{
-  font-size: 2.25em;
+  font-size: 32px;
 }
 h5 {
   font-size: 15px;
@@ -81,6 +83,8 @@ button {
   color: rgba(255,255,255,.60);
   border-radius: 5px;
   padding: 12px;
+  padding-left: 1.5em;
+
 }
 #slide-1 .greeting {
   width: 19em;
@@ -96,7 +100,7 @@ button {
   text-align: center
 }
 #slide-2 .col-md-4 {
-  padding-bottom: 7em;
+  padding-bottom: 5em;
 }
 .about {
   color: #fff;
