--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -1,11 +1,15 @@
-body {
-}
+
 .navbar-header img {
   height: 2.5em;
   margin-top: .25em;
 }
 .navbar-brand {
   float: left;
+}
+.volume {
+  /*float: right;*/
+  margin-top: 17em;
+  padding-left: 5em;
 }
 .top-nav-collapse {
   background-color: #101925;
@@ -62,6 +66,7 @@ body {
    text-align: center;
 }
 #portfolio h3 {
+  text-align: center;
   font-size: 20px;
   line-height: 40px;
 }
@@ -79,8 +84,7 @@ padding-top: 10em;
   padding-bottom: 0em;
 }
 .portfolio-1 .info {
-  text-align: left;
-  line-height: 5em;;
+  line-height: 3em;;
 }
 .portfolio-2 {
   background-color: #a3a3a3;
