--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,6 @@
           <audio id="player" loop="true">
             <source preload="auto" src="<%= audio_path '03 I Remember (Instrumental).m4a'%>"></source>
             <source preload="auto" src="<%= asset_path '03 I Remember (Instrumental).mp3'%>"></source>
-            <!-- <source src="<%= audio_path '03 Destiny.m4a'%>"></source> -->
-            <!-- <source src="<%= audio_path '03 Destiny 1.mp3'%>"></source> -->
           </audio>
           <div class="controls">
           <i class="icon ion-ios-volume-high" id="mute" onclick="document.getElementById('player').muted=!document.getElementById('player').muted"></i>
@@ -30,9 +28,9 @@
      data-aos-easing="linear"
      data-aos-duration="1500">Hi.</h2>
     </div>
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-4 col-md-offset-4">
       <p data-aos="fade-down" data-aos-anchor-placement="center-bottom">
-         I like music, golf, and web design. I'm a web designer and full-stack developer based in Miami, FL. I have a passion for web design and development for all devices.</p>
+         I'm a web designer and developer based in Miami, FL. I have a passion for web design and development using the latest technologies.  When I design, I love working for clients who are incredibly ambitious, because it pushes me beyond my ordinary boundaries. </p>
     </div>
   </div>
 </section>
@@ -50,7 +48,7 @@
   		    <h3 data-aos="fade-right">Develop what you need.</h3>
           <p data-aos="fade-right"
              data-aos-offset="200">
-            I can create websites to do what you want and run across all devices using the latest technologies.</p>
+            I'm a developer, so I know how to create your website to do what you want and run across all devices.</p>
       </div>
       <div class="top-text col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1">
         <img class="item responsive-design-icon" src="<%= asset_path 'responsive2.png' %>" alt="" data-aos=""/>
