--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -15,13 +15,13 @@
                    <a href="#page-top"></a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://www.devonjohnson.io">HOME</a>
+                   <a class="page-scroll" href="https://www.devonjohnson.io">Home</a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://github.com/djohnson0308">GITHUB</a>
+                   <a class="page-scroll" href="https://github.com/djohnson0308">Github</a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LINKEDIN</a>
+                   <a class="page-scroll" href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LinkedIn</a>
                </li>
            </ul>
        </div>
@@ -36,6 +36,14 @@
            <div class="row">
                <div class="col-md-8 col-md-offset-2">
                    <h1 data-aos="fade-up" class="brand-heading">Work</h1>
+               </div>
+               <div class="col-md-1 col-md-offset-11 col-xs-2 col-xs-offset-10 volume">
+                 <a class="page-scroll volume" data-aos="fade-up"><i class="icon ion-ios-volume-high" id="mute" onclick="document.getElementById('player').muted=!document.getElementById('player').muted"></i></a>
+                 <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+                 <audio id="player" loop="true">
+                   <source src="<%= audio_path '03 Destiny.m4a'%>"></source>
+                   <source src="<%= audio_path '03 Destiny 1.mp3'%>"></source>
+                 </audio>
                </div>
            </div>
        </div>
@@ -69,7 +77,7 @@
                 <h1>TagSnooper</h1>
                 <h2>Front-End and Back-End Development</h2>
                 <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                  <h3>A web application built with Ruby, Javascript, Ruby on Rails, HTML5, CSS3, and Twitter’s API where users can find the most relevant hashtags to their topic of interest.</h3>
+                  <p>A web application built with Ruby, Javascript, Ruby on Rails, HTML5, CSS3, and Twitter’s API where users can find the most relevant hashtags to their topic of interest.</p>
                 </div>
               </div>
         </div>
@@ -129,7 +137,7 @@
                <h1>Music Project</h1>
                <h2>Front-End and Back-End Development</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <h3>I'm currently working on a music website as a personal side project. It will feature the best new music and upcoming artists. I will be implementing 'infinite scrolling' and AngularJS features to the site.</h3>
+                 <h3>I'm currently working on a music website as a personal side project. It will feature new music, upcoming artists, and more. I will be implementing 'infinite scrolling' and AngularJS features to the site.</h3>
                </div>
              </div>
        </div>
@@ -144,7 +152,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a href="https://www.devonjohnson.io/home/work"><h3 class="nav-title">Work</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="https://www.devonjohnson.io"><h3 class="nav-title">Home</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
