--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -4,8 +4,8 @@
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                Menu <i class="fa fa-bars"></i>
            </button>
-           <a class="navbar-brand page-scroll" href="https://www.devonjohnson.io">
-               <a href="https://www.devonjohnson.io"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
+           <a class="navbar-brand page-scroll" href="www.devonjohnson.io">
+               <a href="www.devonjohnson.io"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
            </a>
        </div>
        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -15,7 +15,7 @@
                    <a href="#page-top"></a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://www.devonjohnson.io">Home</a>
+                   <a class="page-scroll" href="www.devonjohnson.io">Home</a>
                </li>
                <li>
                    <a class="page-scroll" href="https://github.com/djohnson0308">Github</a>
@@ -148,11 +148,11 @@
 <footer>
   <div class="container">
     <div class="footer-logo-2 col-md-4 col-md-offset-4 text-center">
-      <img href="https://www.devonjohnson.io/home/work" src="<%= asset_path 'portfolio-logo.png' %>"/>
+      <img href="www.devonjohnson.io/home/work" src="<%= asset_path 'portfolio-logo.png' %>"/>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a href="https://www.devonjohnson.io"><h3 class="nav-title">Home</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="www.devonjohnson.io"><h3 class="nav-title">Home</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
