--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="header">
     <div class="gradient"></div>
       <div class="demo"></div>
-        <a href="www.devonjohnson.io"><img class="logo" id="logo" src="<%= asset_path 'portfolio-logo.png' %>"/></a>
+        <a href="/"><img class="logo" id="logo" src="<%= asset_path 'portfolio-logo.png' %>"/></a>
       </div>
       <div class="hsContent" id="blur" data-center="bottom: 5px; opacity: 1"
           data-top="bottom: 400px; opacity: 0"
@@ -86,11 +86,11 @@
 <footer>
   <div class="container">
     <div class="footer-logo col-md-4 col-md-offset-4 text-center">
-      <img href="www.devonjohnson.io" src="<%= asset_path 'portfolio-logo.png' %>"/>
+      <img href="/" src="<%= asset_path 'portfolio-logo.png' %>"/>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a href="www.devonjohnson.io/home/work"><h3 class="nav-title">Work</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="/home/work"><h3 class="nav-title">Work</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
