--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -51,7 +51,8 @@ audio {
 .hsContent {
 	max-width: 700px;
 	position: absolute;
-  left: 44%;
+  left: 55%;
+  // left: 44%;
 }
 .hsContent h2 {
   font-size: 1.65em;
