--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<header>
 <section id="slide-1" class="homeSlide">
   <div class="header">
     <div class="gradient"></div>
@@ -23,6 +24,7 @@
       </div>
   </div>
 </section>
+</header>
 <section id="slide-2" class="about">
   <div class="container">
     <div class="col-md-4 col-md-offset-4 text-center">
