--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -2,10 +2,10 @@
    <div class="container">
        <div class="navbar-header">
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-               Menu <i class="fa fa-bars"></i>
-           </button>
-           <a class="navbar-brand page-scroll" href="www.devonjohnson.io">
                <a href="www.devonjohnson.io"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
+           </button>
+           <a href="/home/work"  href="/home/work">
+               <img data-aos="fade-right" class="navbar-brand page-scroll" src="/assets/portfolio-logo.png"/>
            </a>
        </div>
        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -15,13 +15,13 @@
                    <a href="#page-top"></a>
                </li>
                <li>
-                   <a class="page-scroll" href="/">Home</a>
+                   <a class="page-scroll" href="/">HOME</a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://github.com/djohnson0308">Github</a>
+                   <a class="page-scroll" href="https://github.com/djohnson0308">GITHUB</a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LinkedIn</a>
+                   <a class="page-scroll" href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LINKEDIN</a>
                </li>
            </ul>
        </div>
