--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GSAP</title>
+    <title>DLFJ</title>
     <%= csrf_meta_tags %>
 
     <link rel="stylesheet" href="/assets/aos.css">
@@ -29,10 +29,11 @@
     <!-- scroll magic -->
     <script src="/assets/imagesloaded.js"  type="text/javascript"></script>
     <script src="/assets/_main.js"  type="text/javascript"></script>
-    <script src="/assets/skrollr.js"  type="text/javascript"></script>
+    <!-- <script src="/assets/skrollr.js"  type="text/javascript"></script> -->
     <script src="/assets/main.js"  type="text/javascript"></script>
     <script src="/assets/TweenMax.min.js"  type="text/javascript"></script>
     <script src="/assets/aos.js"  type="text/javascript"></script>
+    <!-- <script src="/assets/enquire.min.js"  type="text/javascript"></script> -->
 
   </body>
 </html>
