--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,7 +6,9 @@ body {
   font-family: "myriad-set-pro_ultralight";
 }
 section {
+  border: none !important;
 }
+
 p {
   font-size: 18px;
   letter-spacing: 0em;
