href links fixed by added js to work page

--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -2,9 +2,9 @@
    <div class="container">
        <div class="navbar-header">
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-               <a href="www.devonjohnson.io"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
+               <a href="/home/work"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
            </button>
-           <a href="javascript:window.location.reload(true)">
+           <a href="/home/work">
                <img data-aos="fade-right" class="navbar-brand page-scroll" src="/assets/portfolio-logo.png"/>
            </a>
        </div>
@@ -15,7 +15,7 @@
                    <a href="#page-top"></a>
                </li>
                <li>
-                   <a class="page-scroll" onclick="javascript:window.location.reload(true)" href="/">HOME</a>
+                   <a class="page-scroll" href="/">HOME</a>
                </li>
                <li>
                    <a class="page-scroll" href="https://github.com/djohnson0308">GITHUB</a>
@@ -148,11 +148,11 @@
 <footer>
   <div class="container">
     <div class="footer-logo-2 col-md-4 col-md-offset-4 text-center">
-      <a onclick="javascript:window.location.reload(true)" href="/"><img src="<%= asset_path 'portfolio-logo.png' %>"/></a>
+      <a onclick="javascript:window.location.reload(true)" href="#"><img src="<%= asset_path 'portfolio-logo.png' %>"/></a>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a onclick="javascript:window.location.reload(true)" href="/"><h3 class="nav-title">Home</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="/"><h3 class="nav-title">Home</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
@@ -166,6 +166,31 @@
 </footer>
 
 <script type="text/javascript">
+
+$(document).ready(function(){
+  // AOS reload
+  AOS.init({
+    duration: 1200,
+     disable: 'mobile'
+  });
+  var $img = $('.intro');
+  // set initial CSS opacity to 0
+  // GSAP handles the cross browser vendor prefixes
+  TweenMax.set($img,{autoAlpha:0});
+  // animate CSS opacity to 1
+  TweenMax.to($img, 2.5, {autoAlpha:1});
+  // music player reload
+  document.getElementById("player").play();
+  document.getElementsByTagName("audio")[0].volume = 0.20;
+  // audio player mute button
+  document.getElementById("mute").addEventListener("click", function (e) {
+  var target = e.target;
+
+  target.classList.toggle("ion-ios-volume-high");
+  target.classList.toggle("ion-ios-volume-low");
+}, false);
+});
+
 function collapseNavbar() {
     if ($(".navbar").offset().top > 50) {
         $(".navbar-fixed-top").addClass("top-nav-collapse");
@@ -173,7 +198,6 @@ function collapseNavbar() {
         $(".navbar-fixed-top").removeClass("top-nav-collapse");
     }
 }
-
 
 $(window).scroll(collapseNavbar);
 $(document).ready(collapseNavbar);
