--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -92,7 +92,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a href="/home/work" onclick="javascript:window.location.reload(true)"><h3 class="nav-title">Work</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="/home/work"><h3 class="nav-title">Work</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
@@ -104,3 +104,57 @@
     </div>
   </div>
 </footer>
+
+<script type="text/javascript">
+$(document).ready(function(){
+  $('.homeSlide').height($(window).height());
+
+  AOS.init({
+    duration: 1200,
+     disable: 'mobile'
+  });
+  // audio player
+  var audio = document.getElementsByTagName("audio")[0];
+  audio.play();
+  // audio player volume
+  document.getElementsByTagName('audio')[0].volume = 0.20;
+  // audio player mute button
+  document.getElementById("mute").addEventListener("click", function (e) {
+  var target = e.target;
+
+  target.classList.toggle("ion-ios-volume-high");
+  target.classList.toggle("ion-ios-volume-low");
+}, false);
+
+  var $img = $('.header');
+  // set initial CSS opacity to 0
+  // GSAP handles the cross browser vendor prefixes
+  TweenMax.set($img,{autoAlpha:0});
+  // animate CSS opacity to 1
+  TweenMax.to($img, 2.5, {autoAlpha:1});
+
+  TweenMax.to(".logo", 2.5, {left:50, top: 30});
+
+  TweenMax.to (".hsContent", 2.5, {});
+  // left: 700px;
+  // bottom: 50, left: 520
+
+  TweenMax.set(".footer-logo", {opacity:0});
+  TweenMax.to(".footer-logo", 2, { y:-160 , opacity:1 , ease:Power1.easeInOut});
+
+  var snow = $(".hsContent");
+  var tl = new TimelineMax({repeat:-1});
+  var bezierPath = [{ x: 3, y: 7 }, { x: -5, y: 8 }, { x: 5, y: 12 },{ x: -5, y: 16 }, {x: 0, y: 0}];
+
+  // tl.set(snow, {autoAlpha:0});
+  tl.to(snow, 20, { bezier: {
+              type: 'soft',
+              values: bezierPath,
+              smoothOrigin: true,
+              timeResolution: 50
+            }, ease: Linear.easeNone});
+  tl.to(snow, {autoAlpha:1, repeat:1, yoyo:true, ease: Linear.easeNone}, 0);
+
+  });
+
+</script>
