--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -2,9 +2,9 @@
    <div class="container">
        <div class="navbar-header">
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-               <a href="/home/work"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
+               <a href="#"><img data-aos="fade-in" src="/assets/portfolio-logo.png"/></a>
            </button>
-           <a href="/home/work">
+           <a href="#">
                <img data-aos="fade-right" class="navbar-brand page-scroll" src="/assets/portfolio-logo.png"/>
            </a>
        </div>
@@ -147,8 +147,8 @@
 </section>
 <footer>
   <div class="container">
-    <div class="footer-logo-2 col-md-4 col-md-offset-4 text-center">
-      <a onclick="javascript:window.location.reload(true)" href="#"><img src="<%= asset_path 'portfolio-logo.png' %>"/></a>
+    <div class="footer-logo col-md-4 col-md-offset-4 text-center">
+      <a href="javascript:window.location.reload(true)"><img src="<%= asset_path 'portfolio-logo.png' %>"/></a>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
