reload added to portfolio project images

--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="display col-lg-12 text-center">
               <div class="col-md-6 col-md-offset-3 text-center">
-                <a href="#"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/tagsnooper-v1.png"></a>
+                <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/tagsnooper-v1.png"></a>
               </div>
             </div>
               <div class="col-lg-12 text-center">
@@ -90,7 +90,7 @@
        <div class="row">
            <div class="display col-lg-12 text-center">
              <div class="col-md-6 col-md-offset-3 text-center">
-               <a href="#"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/sheeley-home.png"></a>
+               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/sheeley-home.png"></a>
              </div>
            </div>
              <div class="col-lg-12 text-center" style="color: #f1f1f1;">
@@ -110,7 +110,7 @@
        <div class="row">
            <div class="display col-lg-12 text-center">
              <div class="col-md-6 col-md-offset-3 text-center product">
-               <a href="#"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/local-lilly-home.png"></a>
+               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/local-lilly-home.png"></a>
              </div>
            </div>
              <div class="col-lg-12 text-center">
@@ -130,7 +130,7 @@
        <div class="row">
            <div class="display col-lg-12 text-center">
              <div class="col-md-6 col-md-offset-3 text-center">
-               <a href="#"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/music-blog-home.png"></a>
+               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/music-blog-home.png"></a>
              </div>
            </div>
              <div class="col-lg-12 text-center">
