--- a/app/assets/stylesheets/grayscale.scss
+++ b/app/assets/stylesheets/grayscale.scss
@@ -77,6 +77,8 @@
     opacity: 1 !important;
     padding-top: 25px;
     font-size: 14px !important;
+    padding: 0px 0px 4px;
+    margin: 0px 15px 11px 15px;
   }
   .top-nav-collapse li a:hover {
     color: #fff !important;
