--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
           data-center="left: 658px"
           data-anchor-target="#slide-1 h2">
         <div class="greeting">
-      		<h2 class="line-1 anim-typewriter" id="">I'm Devon. A web developer.</h2>
+      		<h2 class="line-1 anim-typewriter" id="">I'm Devon. A web developer</h2>
           <h4 class="line-1 anim-typewriter2">in Miami, FL</h4>
           <audio id="player" loop="true">
             <source preload="auto" src="<%= audio_path '03 I Remember (Instrumental).m4a'%>"></source>
@@ -30,10 +30,10 @@
     <div class="col-md-4 col-md-offset-4 text-center">
       <h2 data-aos="fade-down"
      data-aos-easing="linear"
-     data-aos-duration="1500">Hi.</h2>
+     data-aos-duration="1000">Hi.</h2>
     </div>
     <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-      <p data-aos="fade-down" data-aos-anchor-placement="center-bottom">
+      <p data-aos="fade-in">
          I'm a web designer and developer based in Miami, FL. I have a passion for web design and development using the latest technologies.  When I design, I love working for clients who are incredibly ambitious, because it pushes me beyond my ordinary boundaries. </p>
     </div>
   </div>
