--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -54,11 +54,11 @@
 <section id="about" class="about">
    <div class=container>
      <div class="row">
-       <div class="col-lg-12 text-center">
-         <h2>What I've been up to.</h2>
+       <div class="col-lg-12 text-center heading">
+         <h2>What I've been up to</h2>
        </div>
        <div class="col-lg-12 text-center">
-         <h3>Here's a selection of some of my recent work.</h3>
+         <h4>Here's a selection of some of my recent work.</h4>
        </div>
      </div>
    </div>
@@ -90,14 +90,14 @@
        <div class="row">
            <div class="display col-lg-12 text-center">
              <div class="col-md-6 col-md-offset-3 text-center">
-               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/sheeley-home.png"></a>
+               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/hustle.png"></a>
              </div>
            </div>
              <div class="col-lg-12 text-center" style="color: #f1f1f1;">
-               <h1>Sheeley Photography</h1>
+               <h1>Hustle</h1>
                <h2>Web Development and Design UI / UX</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <h3>A Real Estate Photography website I built for a client using Ruby, Javascript, Ruby on Rails, Bootstrap, HTML5, and CSS3.</h3>
+                 <p>A Video Production Agency website I built for a client using Ruby, Javascript, Ruby on Rails, Bootstrap, HTML5, and CSS3.</p>
                </div>
              </div>
        </div>
@@ -117,7 +117,7 @@
                <h1>Local Lilly</h1>
                <h2>Web Design</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <h3>A winning mockup I created for a web design contest using HTML5, CSS3, Bootstrap, and Adobe Illustrator. The client provided a name and a concept. She envisioned a platform that will find local infuencers that can help you promote your business.</h3>
+                 <p>A winning mockup I created for a web design contest using HTML5, CSS3, Bootstrap, and Adobe Illustrator. The client provided a name and a concept. She envisioned a platform that will find local infuencers that can help you promote your business.</p>
                </div>
              </div>
        </div>
@@ -137,7 +137,7 @@
                <h1>Music Project</h1>
                <h2>Front-End and Back-End Development</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <h3>I'm currently working on a music website as a personal side project. It will feature new music, upcoming artists, and more. I will be implementing 'infinite scrolling' and AngularJS features to the site.</h3>
+                 <p>I'm currently working on a music website as a personal side project. It will feature new music, upcoming artists, and more. I will be implementing 'infinite scrolling' and AngularJS features to the site.</p>
                </div>
              </div>
        </div>
