--- a/app/assets/stylesheets/grayscale.scss
+++ b/app/assets/stylesheets/grayscale.scss
@@ -30,7 +30,8 @@
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
-  opacity: .55;
+  opacity: .35;
+  letter-spacing: 1.5px;
 }
 .navbar-custom .nav li a:hover {
   color: #fff;
