--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -1,7 +1,7 @@
 .navbar-header {
 }
 .brand-heading {
-  opacity: .35 !important;
+  opacity: .25 !important;
 }
 .navbar-header img {
   height: 4em;
@@ -49,7 +49,8 @@ a:focus, a:hover {
   padding-top: 7em;
   padding-bottom: 4em;
 }
-#about .col-lg-12 {
+#about .heading {
+  margin-bottom: 3em;
 }
 #about .container {
   padding-top: 7em;
@@ -61,14 +62,24 @@ a:focus, a:hover {
 #about h3 {
   font-size: 20px;
 }
+#about h4 {
+  font-family: '.tk-adobe-garamond-prodelete';
+  -webkit-font-smoothing: antialiased;
+  font-weight: normal;
+}
 #portfolio {
   color: #fff;
   height: 73em;
 }
+#portfolio h1 {
+    font-weight: 900 !important;
+    letter-spacing: 1px;
+}
 #portfolio img {
-  /*height: 25em;*/
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-   text-align: center;
+  box-shadow:         9px 10px 15px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow:    9px 10px 15px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 9px 10px 15px 3px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 #portfolio h3 {
   text-align: center;
@@ -76,48 +87,85 @@ a:focus, a:hover {
   line-height: 40px;
 }
 #portfolio h2 {
-  font-size: 25px;
+  font-family: '.tk-adobe-garamond-prodelete';
+  -webkit-font-smoothing: antialiased;
+  font-size: 1.35em;
+  font-weight: normal;
+  margin-bottom: 20px;
+  margin-top: 15px;
 }
 #portfolio .display {
 padding-top: 10em;
 }
+#portfolio p {
+  font-family: '.tk-adobe-garamond-prodelete';
+  -webkit-font-smoothing: antialiased;
+  font-size: 1.35em;
+}
 .portfolio-1 {
-  background-color: #4f6a7e;
+  /*background-color: #4f6a7e;*/
+  background-color: #21364b;
+}
+.portfolio-1 h2 {
+  color: #a7e0f3;
 }
 .portfolio-1 .col-lg-12 {
+  color: #fff;
   padding-top: 5em;
   padding-bottom: 0em;
 }
 .portfolio-1 .info {
-  line-height: 3em;;
+  color: #e4f5fb;
+  line-height: 3em;
+  margin-top: 1em;
 }
 .portfolio-2 {
-  background-color: #a3a3a3;
+  background-color: rgba(31,31,31,0.75);
+}
+.portfolio-2 h1 {
+  font-weight: 900 !important;
+  color: #fff;
+}
+.portfolio-2 h2 {
+  color: #8ad19d;
 }
 .portfolio-2 .col-lg-12 {
+  color: #A5A4A4;
   padding-top: 5em;
   padding-bottom: 0em
 }
 .portfolio-2 .info {
-  text-align: left;
+  color: #d2d2d2;
+  text-align: center;
+  margin-top: 1em;
 }
 .portfolio-3 {
-  background-color: #758396;
+  background-color: #475261;
+}
+.portfolio-3 h2 {
+  color: #E3EEFF;
 }
 .portfolio-3 .col-lg-12 {
+  color: #fff;
   padding-top: 5em;
   padding-bottom: 0em
 }
 .portfolio-3 .info {
-  text-align: left;
+  text-align: center;
+  margin-top: 1em;
+  color: #fff;
 }
 .portfolio-4 {
-  background-color: #8ca6a6;
+  background-color: #5c8886;
+}
+.portfolio-4 h2 {
+  color: #D4FAF6;
 }
 .portfolio-4 .col-lg-12 {
   padding-top: 5em;
   padding-bottom: 0em
 }
 .portfolio-4 .info {
-  text-align: left;
+  text-align: center;
+  margin-top: 1em;
 }
