--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tags %>
 
     <link rel="stylesheet" href="/assets/aos.css">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <!-- <link href="/assets/ionicons.css" media="screen" rel="stylesheet" />
     <link href="/assets/ionicons.min.css" media="screen" rel="stylesheet" /> -->
 
