--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,24 +11,24 @@ section {
 }
 
 p {
-  // font-size: 18px;
-  font-size: 1.35em;
+  color: rgba(255, 255, 255, .86);
   letter-spacing: .5px;
-  // font-family: 'myriad-set-pro_thin';
-  // font-weight: 400;
-  font-family: '.tk-adobe-garamond-prodelete';
-  -webkit-font-smoothing: antialiased;
+  font-family: 'myriad-set-pro_thin';
+  font-size: 1.2em;
   line-height: 1.6;
   font-style: normal;
 }
 h1 {
-  font-weight: 700;
+  color: rgba(255, 255, 255, .86);
+  font-weight: 900;
 }
 h2 {
+  color: rgba(255, 255, 255, .86);
   font-size: 40px;
   font-weight: 900;
 }
 h3 {
+  color: rgba(255, 255, 255, .86);
   font-size: 32px;
   font-weight: 600;
 }
@@ -96,11 +96,15 @@ button {
 	bottom: 0;
 	top: auto;
   background: rgba(255,255,255,0.3);
-  color: rgba(255,255,255,.60);
   border-radius: 5px;
   padding: 12px;
   padding-left: 1.5em;
-
+}
+#slide-1 h2 {
+  color: rgba(255,255,255,0.6) !important;
+}
+#slide-1 h4 {
+  color: rgba(255,255,255,.60) !important;
 }
 #slide-1 .greeting {
   width: 19em;
@@ -172,7 +176,7 @@ footer .footer-logo {
   bottom: -10em;
 }
 footer h3 {
-  color: honeydew;
+  color: rgba(255,255,255,.60);
   font-size: 1.75em;
 }
 footer img {
