--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -38,7 +38,7 @@
   display: inline-block;
 }
 #navbar li a {
-  color: #fff;
+  color: rgba(255, 255, 255, 0.6);
   font-size: 15px;
 }
 a:focus, a:hover {
@@ -46,7 +46,6 @@ a:focus, a:hover {
 }
 #about {
   background-color: #15212f;
-  color: #fff;
   padding-top: 7em;
   padding-bottom: 4em;
 }
@@ -58,23 +57,26 @@ a:focus, a:hover {
   padding-bottom: 12em;
 }
 #about h2 {
-  font-size: 25px;
+  color: rgba(255, 255, 255, 0.86);
+  font-size: 32px;
 }
 #about h3 {
+  color: rgba(255, 255, 255, 0.86);
   font-size: 20px;
 }
 #about h4 {
-  font-family: '.tk-adobe-garamond-prodelete';
+  /*font-family: '.tk-adobe-garamond-prodelete';
   -webkit-font-smoothing: antialiased;
-  font-weight: normal;
+  font-weight: normal;*/
 }
 #portfolio {
   color: #fff;
   height: 73em;
 }
 #portfolio h1 {
-    font-weight: 900 !important;
-    letter-spacing: 1px;
+  font-family: 'myriad-set-pro_text';
+  font-weight: 900 !important;
+  letter-spacing: 2px;
 }
 #portfolio img {
   box-shadow:         9px 10px 15px 3px rgba(0, 0, 0, 0.2);
@@ -88,10 +90,12 @@ a:focus, a:hover {
   line-height: 40px;
 }
 #portfolio h2 {
-  font-family: '.tk-adobe-garamond-prodelete';
+  /*font-family: '.tk-adobe-garamond-prodelete';
   -webkit-font-smoothing: antialiased;
   font-size: 1.35em;
-  font-weight: normal;
+  font-weight: normal;*/
+  font-family: 'myriad-set-pro_ultralight';
+  font-size: 1.35em;
   margin-bottom: 20px;
   margin-top: 15px;
 }
@@ -99,8 +103,10 @@ a:focus, a:hover {
 padding-top: 10em;
 }
 #portfolio p {
-  font-family: '.tk-adobe-garamond-prodelete';
+  /*font-family: '.tk-adobe-garamond-prodelete';
   -webkit-font-smoothing: antialiased;
+  font-size: 1.35em;*/
+  font-family: 'myriad-set-pro_thin';
   font-size: 1.35em;
 }
 .portfolio-1 {
