--- a/app/assets/stylesheets/grayscale.scss
+++ b/app/assets/stylesheets/grayscale.scss
@@ -23,7 +23,7 @@
   outline: none;
 }
 .navbar-custom a {
-  color: rgba(255, 255, 255, 0.6);
+  color: #cccccc;
   font-family: 'myriad-set-pro_thin' !important;
   padding-top: 25px !important;
 }
