--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -176,7 +176,7 @@ footer .footer-logo {
   bottom: -10em;
 }
 footer h3 {
-  color: rgba(255,255,255,.60);
+  color: #cccccc;
   font-size: 1.75em;
 }
 footer img {
