--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -97,7 +97,7 @@
                <h1>Hustle</h1>
                <h2>Web Development and Design UI / UX</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <p>A Video Production Agency website I built for a client using Ruby, Javascript, Ruby on Rails, Bootstrap, HTML5, and CSS3.</p>
+                 <p>A redesign of a video production agency website I am finishing for a client. The site is built with Ruby, Javascript, Ruby on Rails, Bootstrap, HTML5, and CSS3.</p>
                </div>
              </div>
        </div>
@@ -115,7 +115,7 @@
            </div>
              <div class="col-lg-12 text-center">
                <h1>Local Lilly</h1>
-               <h2>Web Design</h2>
+               <h2>Web Design UI / UX</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
                  <p>A winning mockup I created for a web design contest using HTML5, CSS3, Bootstrap, and Adobe Illustrator. The client provided a name and a concept. She envisioned a platform that will find local infuencers that can help you promote your business.</p>
                </div>
@@ -137,7 +137,7 @@
                <h1>Music Project</h1>
                <h2>Front-End and Back-End Development</h2>
                <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <p>I'm currently working on a music website as a personal side project. It will feature new music, upcoming artists, and more. I will be implementing 'infinite scrolling' and AngularJS features to the site.</p>
+                 <p>I'm currently working on a music website as a personal side project. It will feature new music, upcoming artists, and more. I will be implementing 'infinite scrolling' and Angular features to the site.</p>
                </div>
              </div>
        </div>
